--- a/styles/main.css
+++ b/styles/main.css
@@ -1,11 +1,12 @@
 .start-panel {
     display:grid;
-    grid-template-columns: 50px 170px auto;
+    grid-template-columns: 50px 1fr 1fr 1fr 1fr 1fr 1fr;
+    
     gap:5px;
 }
 .start-panel__icons {
     display:grid;
-    grid-template-rows:repeat(5, 50px) ;
+    grid-template-rows:1fr auto ;
     grid-row-end:auto ;
 }
 .start-panel__grid {
@@ -16,17 +17,22 @@
 }
 .apps--office {
     display:grid;
+    grid-template-columns: repeat(3, 1fr);
 }
 .apps--web {
     display:grid;
+    grid-template-rows: repeat(3, 1fr);
+    grid-auto-rows: 50px;
 }
 .apps--other {
     display:grid;
+    grid-template-columns: repeat(3, 1fr);
 }
 .apps__grid {
     display:grid;
-    grid-template-columns: auto;
-    grid-auto-rows: 2;
+    grid-template-columns: repeat(6, 50px);
+    grid-auto-rows: 50px;
+    
 }
 .app--g2x2 {
     display: grid;
